--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -145,7 +145,7 @@
       background-color: var(--secundaria);
     }
 
-    /* NOVO SELETOR DE IDIOMA (LADO A LADO) */
+    /* SELETOR DE IDIOMA COM BANDEIRAS */
     .lang-switch {
       display: flex;
       align-items: center;
@@ -156,7 +156,7 @@
       font-size: 14px;
       cursor: pointer;
       flex-shrink: 0;
-      z-index: 999999; /* bem alto */
+      z-index: 999999;
     }
     .lang-switch a {
       display: flex;
@@ -247,10 +247,10 @@
        ESTILOS ESPECÍFICOS PARA A PÁGINA "PROJETOS"
        ------------------------------------------- */
 
-    /* Título "Projetos Hannah" */
+    /* Título "Projetos Hannah" ocupa toda a tela */
     #pagina-projetos-hero {
       width: 100%;
-      min-height: 300px;
+      min-height: 100vh; /* Ocupa a altura total da tela */
       background: url("imagens/imgprojetos.png") center center / cover no-repeat fixed;
       display: flex;
       align-items: center;
@@ -266,44 +266,51 @@
       border-radius: 10px;
     }
 
- /* Carrossel Horizontal */
+   /* Carrossel Horizontal (scroll + arrastar) */
 .carousel-container {
   position: relative;
-  max-width: 800px; /* Diminuído o tamanho máximo */
-  margin: 20px auto; /* Reduzida a margem */
-  overflow: hidden;
-  background: rgba(255, 255, 255, 0.5); /* Fundo branco com transparência */
-  border-radius: 10px; /* Bordas arredondadas para um visual elegante */
+  max-width: 1000px;
+  margin: 40px auto;
+  overflow: hidden; /* oculta a barra de rolagem original */
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  padding: 10px 0;
 }
 
 .carousel-track {
   display: flex;
-  transition: transform 0.5s ease;
+  gap: 20px; /* espaçamento entre os itens */
+  padding: 0 20px;
+  overflow-x: auto; /* permite scroll horizontal */
+  scroll-behavior: smooth;
+  /* Oculta barra de rolagem no Chrome, Safari e Opera */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.carousel-track::-webkit-scrollbar {
+  display: none; /* Chrome/Safari */
 }
 
 .carousel-item {
-  min-width: 180px; /* Reduzido o tamanho mínimo */
-  margin-right: 15px; /* Menor espaço entre os itens */
-  background-color: rgba(255, 255, 255, 0.8); /* Fundo branco mais transparente nos itens */
+  background-color: #fff;
   border-radius: 6px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Reduzi a intensidade da sombra */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
   flex-shrink: 0;
-  position: relative;
+  width: 160px; /* Largura fixa para cada item */
+  cursor: pointer;
 }
-
 .carousel-item img {
   width: 100%;
   height: auto; /* Ajusta automaticamente a altura proporcional à largura */
-  max-height: 120px; /* Limita a altura para evitar imagens muito grandes */
-  object-fit: contain; /* Ajusta a imagem para que seja completamente visível */
-  border-radius: 6px; /* Bordas ajustadas */
+  max-height: 120px; /* Limita a altura máxima */
+  object-fit: contain; /* Garante que a imagem inteira seja exibida sem cortes */
+  border-radius: 6px 6px 0 0;
 }
-
 .carousel-item h3 {
-  margin: 8px 0; /* Margem menor */
+  margin: 8px 0;
   font-family: 'Montserrat', sans-serif;
-  font-size: 14px; /* Fonte menor */
+  font-size: 14px;
   color: var(--primaria);
 }
 
@@ -312,30 +319,27 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.6); /* Fundo preto com transparência */
+  background-color: rgba(0, 0, 0, 0.6);
   color: #fff;
   border: none;
   border-radius: 50%;
-  width: 30px; /* Botões menores */
-  height: 30px;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
   z-index: 10;
   font-weight: bold;
-  font-size: 16px; /* Fonte reduzida */
+  font-size: 18px;
   opacity: 0.7;
   transition: opacity 0.3s ease;
 }
-
 .carousel-btn:hover {
   opacity: 1;
 }
-
 .carousel-btn-prev {
-  left: 8px; /* Ajustado para o tamanho menor */
+  left: 10px;
 }
-
 .carousel-btn-next {
-  right: 8px; /* Ajustado para o tamanho menor */
+  right: 10px;
 }
 
     /* CONTAINER ESCONDIDO (DETALHES DO PROJETO) */
@@ -426,7 +430,7 @@
 
     @media (max-width: 768px) {
       .carousel-container {
-        margin: 30px auto;
+        margin: 20px auto;
       }
       .detalhes-conteudo {
         flex-direction: column;
@@ -441,21 +445,23 @@
 </head>
 
 <body>
-  <!-- CABEÇALHO (mesmo da página principal) -->
+  <!-- CABEÇALHO -->
   <header>
     <div class="logo">
       <img src="imagens/logo.png" alt="Logotipo Fundação Hannah" />
     </div>
 
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
+
     <nav class="menu">
       <ul>
-        <li><a href="index.html#sobre-nos">Sobre Nós</a></li>
-        <li><a href="index.html#projetos">Projetos</a></li>
-        <li><a href="index.html#como-ajudar">Como Ajudar</a></li>
-        <li><a href="index.html#historias-impacto">Histórias</a></li>
-        <li><a href="index.html#depoimentos">Depoimentos</a></li>
-        <li><a href="index.html#footer">Contato</a></li>
+        <!-- Ajustando os links para irem para hannah.html + anchors -->
+        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#sobre-nos">Sobre Nós</a></li>
+        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#projetos">Projetos</a></li>
+        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#como-ajudar">Como Ajudar</a></li>
+        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#historias-impacto">Histórias</a></li>
+        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#depoimentos">Depoimentos</a></li>
+        <li><a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html#footer">Contato</a></li>
       </ul>
     </nav>
 
@@ -463,10 +469,16 @@
       <button onclick="alert('Página de Doação em desenvolvimento')">Doe Agora</button>
     </div>
 
-    <!-- SELETOR DE IDIOMA (exemplo, sem funcionalidade real aqui) -->
+    <!-- Seletor de idioma com bandeiras -->
     <div class="lang-switch">
-      <a href="#" id="lang-pt">PT</a>
-      <a href="#" id="lang-en" class="inactive">EN</a>
+      <a href="#" id="lang-pt">
+        <img src="imagens/bandeira-pt.png" alt="PT" />
+        PT
+      </a>
+      <a href="#" id="lang-en" class="inactive">
+        <img src="imagens/bandeira-en.png" alt="EN" />
+        EN
+      </a>
     </div>
   </header>
 
@@ -475,7 +487,7 @@
     Doe Agora
   </button>
 
-  <!-- TÍTULO PARALLAX -->
+  <!-- TÍTULO PARALLAX (ocupa 100vh) -->
   <section id="pagina-projetos-hero">
     <h1>Projetos Hannah</h1>
   </section>
@@ -483,8 +495,9 @@
   <!-- CARROSSEL HORIZONTAL -->
   <div class="carousel-container">
     <button class="carousel-btn carousel-btn-prev" id="btn-prev">&#10094;</button>
-    <div class="carousel-track" id="carousel-track">
 
+    <!-- Faixa onde ficam os itens do carrossel -->
+    <div class="carousel-track" id="carousel-track">
       <!-- ITEM 1: Abrigo Hannah -->
       <div class="carousel-item" onclick="mostrarDetalhes('abrigo')">
         <img src="imagens/abrigo hannah.png" alt="Abrigo Hannah" />
@@ -527,7 +540,13 @@
         <h3>Saúde Hannah</h3>
       </div>
 
+      <!-- ITEM 8: Plantação de Igrejas Hannah -->
+      <div class="carousel-item" onclick="mostrarDetalhes('igreja')">
+        <img src="imagens/igreja hannah.png" alt="Plantação de Igrejas Hannah" />
+        <h3>Igrejas Hannah</h3>
+      </div>
     </div>
+
     <button class="carousel-btn carousel-btn-next" id="btn-next">&#10095;</button>
   </div>
 
@@ -591,7 +610,7 @@
 
   <!-- JAVASCRIPT -->
   <script>
-    /* MENU MOBILE (opcional se quiser manter funcionamento igual à página principal) */
+    /* MENU MOBILE */
     function toggleMenu() {
       const menuUl = document.querySelector('nav.menu ul');
       if (menuUl.style.display === 'flex') {
@@ -601,74 +620,87 @@
       }
     }
 
-    /* CARROSSEL HORIZONTAL - AUTO SLIDE */
+    /* CARROSSEL: NAVEGAÇÃO POR BOTÕES E AUTO-SLIDE */
     const track = document.getElementById('carousel-track');
     const btnPrev = document.getElementById('btn-prev');
     const btnNext = document.getElementById('btn-next');
-    let slideIndex = 0;
-    let itemWidth = 270; // Largura aproximada de cada item (250 + margin)
-    let autoSlideInterval;
 
-    function slideTo(index) {
-      track.style.transform = `translateX(-${index * itemWidth}px)`;
-      slideIndex = index;
-    }
+    let autoSlideInterval; // para armazenar setInterval
+    const scrollAmount = 200; // quantos px rola ao clicar no botão
+    const autoSlideTime = 5000; // 5s
 
     function slideNext() {
-      // Número total de itens
-      const totalItems = track.querySelectorAll('.carousel-item').length;
-      // Quantos cabem na tela? (aprox)
-      const containerWidth = document.querySelector('.carousel-container').clientWidth;
-      const itemsPerScreen = Math.floor(containerWidth / itemWidth);
-      const maxIndex = totalItems - itemsPerScreen;
-      if (slideIndex < maxIndex) {
-        slideTo(slideIndex + 1);
-      } else {
-        slideTo(0);
-      }
+      track.scrollLeft += scrollAmount;
     }
     function slidePrev() {
-      const totalItems = track.querySelectorAll('.carousel-item').length;
-      const containerWidth = document.querySelector('.carousel-container').clientWidth;
-      const itemsPerScreen = Math.floor(containerWidth / itemWidth);
-      const maxIndex = totalItems - itemsPerScreen;
-      if (slideIndex > 0) {
-        slideTo(slideIndex - 1);
-      } else {
-        slideTo(maxIndex);
-      }
+      track.scrollLeft -= scrollAmount;
     }
 
     btnNext.addEventListener('click', () => {
       slideNext();
-      resetAutoSlide();
+      stopAutoSlide();
     });
-
     btnPrev.addEventListener('click', () => {
       slidePrev();
-      resetAutoSlide();
+      stopAutoSlide();
     });
 
     function startAutoSlide() {
-      autoSlideInterval = setInterval(slideNext, 5000); // 5s
+      autoSlideInterval = setInterval(() => {
+        slideNext();
+      }, autoSlideTime);
     }
-    function resetAutoSlide() {
+    function stopAutoSlide() {
       clearInterval(autoSlideInterval);
-      startAutoSlide();
     }
 
-    window.addEventListener('resize', () => {
-      // recalcula itemWidth se necessário
-      // mas para simplificar, deixamos fixo ou ajustamos aqui se quiser
-      itemWidth = 270; // ou re-calcule
-      slideTo(0);
-    });
-
-    /* INICIA O CARROSSEL */
+    // Inicia autoplay ao carregar
     startAutoSlide();
 
+    /* ARRASTAR COM MOUSE OU TOQUE */
+    let isDragging = false;
+    let startX, scrollLeft;
 
-    /* EXEMPLO DE DADOS FAKE PARA CADA PROJETO */
+    // Eventos de mouse
+    track.addEventListener('mousedown', (e) => {
+      isDragging = true;
+      startX = e.pageX - track.offsetLeft;
+      scrollLeft = track.scrollLeft;
+      stopAutoSlide(); // para o autoplay ao começar a arrastar
+    });
+    track.addEventListener('mouseleave', () => {
+      isDragging = false;
+    });
+    track.addEventListener('mouseup', () => {
+      isDragging = false;
+    });
+    track.addEventListener('mousemove', (e) => {
+      if (!isDragging) return;
+      e.preventDefault();
+      const x = e.pageX - track.offsetLeft;
+      const walk = x - startX;
+      track.scrollLeft = scrollLeft - walk;
+    });
+
+    // Eventos de toque (touch)
+    track.addEventListener('touchstart', (e) => {
+      isDragging = true;
+      startX = e.touches[0].pageX - track.offsetLeft;
+      scrollLeft = track.scrollLeft;
+      stopAutoSlide();
+    });
+    track.addEventListener('touchend', () => {
+      isDragging = false;
+    });
+    track.addEventListener('touchmove', (e) => {
+      if (!isDragging) return;
+      const x = e.touches[0].pageX - track.offsetLeft;
+      const walk = x - startX;
+      track.scrollLeft = scrollLeft - walk;
+    });
+
+
+    /* DADOS FAKE DOS PROJETOS */
     const projetosData = {
       abrigo: {
         titulo: "Abrigo Hannah",
@@ -680,7 +712,7 @@
           "Acompanhamento espiritual"
         ],
         recursos: "Precisamos de doações para manter o abrigo em funcionamento: alimentos, roupas, produtos de higiene, além de suporte financeiro para reformas.",
-        termometro: 40 // 40%
+        termometro: 40
       },
       bolsa: {
         titulo: "Bolsa Escola Hannah",
@@ -713,7 +745,7 @@
         acoes: [
           "Plataforma online de ensino",
           "Aulas presenciais e virtuais",
-          "Uso de IA “Samuel the Robot” (exemplo fictício)"
+          "Uso de IA 'Samuel the Robot' (exemplo fictício)"
         ],
         recursos: "Ampliação de licenças de software, contratação de professores e material didático.",
         termometro: 50
@@ -753,6 +785,18 @@
         ],
         recursos: "Equipamentos médicos, medicamentos, parcerias com profissionais voluntários e veículos para transporte.",
         termometro: 70
+      },
+      igreja: {
+        titulo: "Plantação de Igrejas Hannah",
+        img: "imagens/igreja hannah.png",
+        texto: "Descrição fake da Plantação de Igrejas Hannah. Iniciativa dedicada a estabelecer novas igrejas e fortalecer comunidades de fé.",
+        acoes: [
+          "Discipulado e formação de líderes",
+          "Construção de espaços de culto",
+          "Treinamentos missionários"
+        ],
+        recursos: "Precisamos de verbas para infraestrutura das igrejas, materiais de ensino e capacitação de obreiros locais.",
+        termometro: 45
       }
     };
 
@@ -768,7 +812,7 @@
       // Lista de ações
       const ulAcoes = document.getElementById('detalhes-acoes-list');
       ulAcoes.innerHTML = "";
-      dados.acoes.forEach( acao => {
+      dados.acoes.forEach(acao => {
         const li = document.createElement('li');
         li.textContent = acao;
         ulAcoes.appendChild(li);
@@ -788,7 +832,6 @@
 
       // Exibe container
       document.getElementById('container-detalhes').style.display = 'block';
-      // Rola a página até ele, se quiser
       document.getElementById('container-detalhes').scrollIntoView({behavior: 'smooth'});
     }
 
