--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -498,46 +498,47 @@
 
     <!-- Faixa onde ficam os itens do carrossel -->
     <div class="carousel-track" id="carousel-track">
-      <!-- ITEM 1: Abrigo Hannah -->
+      <!-- ITEM 1: Lar de Siló
+ -->
       <div class="carousel-item" onclick="mostrarDetalhes('abrigo')">
-        <img src="imagens/abrigo hannah.png" alt="Abrigo Hannah" />
-        <h3>Abrigo Hannah</h3>
+        <img src="imagens/abrigo hannah.png" alt="Lar de Siló" />
+        <h3>Lar de Siló</h3>
       </div>
 
-      <!-- ITEM 2: Bolsa Escola Hannah -->
+      <!-- ITEM 2: Sementes de Sabedoria -->
       <div class="carousel-item" onclick="mostrarDetalhes('bolsa')">
-        <img src="imagens/bolsa escola hannah.png" alt="Bolsa Escola Hannah" />
-        <h3>Bolsa Escola Hannah</h3>
+        <img src="imagens/bolsa escola hannah.png" alt="Sementes de Sabedoria" />
+        <h3>Sementes de Sabedoria</h3>
       </div>
 
-      <!-- ITEM 3: Fazenda Hannah -->
+      <!-- ITEM 3: Colhendo Fé -->
       <div class="carousel-item" onclick="mostrarDetalhes('fazenda')">
-        <img src="imagens/fazenda hannah.png" alt="Fazenda Hannah" />
-        <h3>Fazenda Hannah</h3>
+        <img src="imagens/fazenda hannah.png" alt="Colhendo Fé" />
+        <h3>Colhendo Fé</h3>
       </div>
 
-      <!-- ITEM 4: Curso de Inglês Hannah -->
+      <!-- ITEM 4: Hannah English Course -->
       <div class="carousel-item" onclick="mostrarDetalhes('ingles')">
-        <img src="imagens/ingles.png" alt="Curso de Inglês Hannah" />
-        <h3>Curso de Inglês Hannah</h3>
+        <img src="imagens/ingles.png" alt="Hannah English Course" />
+        <h3>Hannah English Course</h3>
       </div>
 
-      <!-- ITEM 5: Food Hannah -->
-      <div class="carousel-item" onclick="mostrarDetalhes('food')">
-        <img src="imagens/food hannah.png" alt="Food Hannah" />
-        <h3>Food Hannah</h3>
+      <!-- ITEM 5: Mesa de Bênçãos -->
+      <div class="carousel-item" onclick="mostrarDetalhes(food')">
+        <img src="imagens/food hannah.png" alt="Mesa de Bênçãos" />
+        <h3>Mesa de Bênçãos</h3>
       </div>
 
-      <!-- ITEM 6: HIS Hannah -->
+      <!-- ITEM 6: Centro de Aprendizado HIS -->
       <div class="carousel-item" onclick="mostrarDetalhes('his')">
-        <img src="imagens/HIS hannah.png" alt="HIS Hannah" />
-        <h3>HIS Hannah</h3>
+        <img src="imagens/HIS hannah.png" alt="Centro de Aprendizado HIS" />
+        <h3>Centro de Aprendizado HIS</h3>
       </div>
 
-      <!-- ITEM 7: Saúde Hannah -->
+      <!-- ITEM 7: Mãos que Curam -->
       <div class="carousel-item" onclick="mostrarDetalhes('saude')">
-        <img src="imagens/saude hannah.png" alt="Saúde Hannah" />
-        <h3>Saúde Hannah</h3>
+        <img src="imagens/saude hannah.png" alt="Mãos que Curam" />
+        <h3>Mãos que Curam</h3>
       </div>
 
       <!-- ITEM 8: Plantação de Igrejas Hannah -->
@@ -585,10 +586,10 @@
             </div>
           </div>
 
-          <!-- Botão especial para o Curso de Inglês (só aparece nesse caso) -->
+          <!-- Botão especial para o Centro de Aprendizado HIS (só aparece nesse caso) -->
           <div class="botao-ingles" id="btn-ingles-container" style="display:none;">
             <a href="https://hannahenglishcourse.vercel.app/" target="_blank">
-              <img src="imagens/convite.gif" alt="Convite para o Curso de Inglês Hannah" />
+              <img src="imagens/convite.gif" alt="Convite para o Centro de Aprendizado HIS" />
             </a>
           </div>
 
@@ -703,9 +704,10 @@
     /* DADOS FAKE DOS PROJETOS */
     const projetosData = {
       abrigo: {
-        titulo: "Abrigo Hannah",
+        titulo: "Lar de Siló",
         img: "imagens/abrigo hannah.png",
-        texto: "Descrição fake do Abrigo Hannah. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vehicula lorem vel enim ultricies, eu tempus tellus consequat.",
+        texto: "Descrição fake do Lar de Siló
+. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vehicula lorem vel enim ultricies, eu tempus tellus consequat.",
         acoes: [
           "Acolhimento de mulheres e crianças",
           "Atendimento psicossocial",
@@ -715,9 +717,9 @@
         termometro: 40
       },
       bolsa: {
-        titulo: "Bolsa Escola Hannah",
+        titulo: "Sementes de Sabedoria",
         img: "imagens/bolsa escola hannah.png",
-        texto: "Descrição fake da Bolsa Escola Hannah. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer sed tempor leo.",
+        texto: "Descrição fake da Sementes de Sabedoria. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer sed tempor leo.",
         acoes: [
           "Bolsas de estudos para crianças carentes",
           "Kit de material escolar",
@@ -727,9 +729,9 @@
         termometro: 60
       },
       fazenda: {
-        titulo: "Fazenda Hannah",
+        titulo: "Colhendo Fé",
         img: "imagens/fazenda hannah.png",
-        texto: "Descrição fake da Fazenda Hannah. Curabitur quis elit eget urna fermentum sodales. Donec eget felis nulla. Vivamus maximus urna id porta vehicula.",
+        texto: "Descrição fake da Colhendo Fé. Curabitur quis elit eget urna fermentum sodales. Donec eget felis nulla. Vivamus maximus urna id porta vehicula.",
         acoes: [
           "Cultivo de hortaliças",
           "Criação de animais",
@@ -739,9 +741,9 @@
         termometro: 35
       },
       ingles: {
-        titulo: "Curso de Inglês Hannah",
+        titulo: "Hannah English Course",
         img: "imagens/ingles.png",
-        texto: "Descrição fake do Curso de Inglês Hannah. Aulas interativas, conteúdos bíblicos e abordagem pedagógica inovadora para crianças, jovens e adultos.",
+        texto: "Descrição fake do Hannah English Course. Aulas interativas, conteúdos bíblicos e abordagem pedagógica inovadora para crianças, jovens e adultos.",
         acoes: [
           "Plataforma online de ensino",
           "Aulas presenciais e virtuais",
@@ -751,9 +753,9 @@
         termometro: 50
       },
       food: {
-        titulo: "Food Hannah",
+        titulo: "Mesa de Bênçãos",
         img: "imagens/food hannah.png",
-        texto: "Descrição fake do Food Hannah. Fornecemos refeições diárias para famílias em situação de vulnerabilidade.",
+        texto: "Descrição fake do Mesa de Bênçãos. Fornecemos refeições diárias para famílias em situação de vulnerabilidade.",
         acoes: [
           "Distribuição de cestas básicas",
           "Refeições comunitárias",
@@ -763,9 +765,9 @@
         termometro: 80
       },
       his: {
-        titulo: "HIS Hannah",
+        titulo: "Centro de Aprendizado HIS",
         img: "imagens/HIS hannah.png",
-        texto: "Descrição fake do HIS Hannah. Projeto de educação cristã com reforço escolar e formação de líderes jovens.",
+        texto: "Descrição fake do Centro de Aprendizado HIS. Projeto de educação cristã com reforço escolar e formação de líderes jovens.",
         acoes: [
           "Cursos de capacitação",
           "Palestras motivacionais",
@@ -775,9 +777,9 @@
         termometro: 20
       },
       saude: {
-        titulo: "Saúde Hannah",
+        titulo: "Mãos que Curam",
         img: "imagens/saude hannah.png",
-        texto: "Descrição fake do Saúde Hannah. Oferece atendimento médico e odontológico básico, além de palestras de prevenção.",
+        texto: "Descrição fake do Mãos que Curam. Oferece atendimento médico e odontológico básico, além de palestras de prevenção.",
         acoes: [
           "Consultas gratuitas",
           "Vacinações e exames",
