--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -266,81 +266,81 @@
       border-radius: 10px;
     }
 
-   /* Carrossel Horizontal (scroll + arrastar) */
-.carousel-container {
-  position: relative;
-  max-width: 1000px;
-  margin: 40px auto;
-  overflow: hidden; /* oculta a barra de rolagem original */
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 10px;
-  padding: 10px 0;
-}
+    /* Carrossel Horizontal (scroll + arrastar) */
+    .carousel-container {
+      position: relative;
+      max-width: 1000px;
+      margin: 40px auto;
+      overflow: hidden; /* oculta a barra de rolagem original */
+      background: rgba(255, 255, 255, 0.5);
+      border-radius: 10px;
+      padding: 10px 0;
+    }
 
-.carousel-track {
-  display: flex;
-  gap: 20px; /* espaçamento entre os itens */
-  padding: 0 20px;
-  overflow-x: auto; /* permite scroll horizontal */
-  scroll-behavior: smooth;
-  /* Oculta barra de rolagem no Chrome, Safari e Opera */
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE 10+ */
-}
-.carousel-track::-webkit-scrollbar {
-  display: none; /* Chrome/Safari */
-}
+    .carousel-track {
+      display: flex;
+      gap: 20px; /* espaçamento entre os itens */
+      padding: 0 20px;
+      overflow-x: auto; /* permite scroll horizontal */
+      scroll-behavior: smooth;
+      /* Oculta barra de rolagem no Chrome, Safari e Opera */
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none; /* IE 10+ */
+    }
+    .carousel-track::-webkit-scrollbar {
+      display: none; /* Chrome/Safari */
+    }
 
-.carousel-item {
-  background-color: #fff;
-  border-radius: 6px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  flex-shrink: 0;
-  width: 160px; /* Largura fixa para cada item */
-  cursor: pointer;
-}
-.carousel-item img {
-  width: 100%;
-  height: auto; /* Ajusta automaticamente a altura proporcional à largura */
-  max-height: 120px; /* Limita a altura máxima */
-  object-fit: contain; /* Garante que a imagem inteira seja exibida sem cortes */
-  border-radius: 6px 6px 0 0;
-}
-.carousel-item h3 {
-  margin: 8px 0;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
-  color: var(--primaria);
-}
+    .carousel-item {
+      background-color: #fff;
+      border-radius: 6px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      flex-shrink: 0;
+      width: 160px; /* Largura fixa para cada item */
+      cursor: pointer;
+    }
+    .carousel-item img {
+      width: 100%;
+      height: auto; /* Ajusta automaticamente a altura proporcional à largura */
+      max-height: 120px; /* Limita a altura máxima */
+      object-fit: contain; /* Garante que a imagem inteira seja exibida sem cortes */
+      border-radius: 6px 6px 0 0;
+    }
+    .carousel-item h3 {
+      margin: 8px 0;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 14px;
+      color: var(--primaria);
+    }
 
-/* Botões de navegação do carrossel */
-.carousel-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.6);
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  z-index: 10;
-  font-weight: bold;
-  font-size: 18px;
-  opacity: 0.7;
-  transition: opacity 0.3s ease;
-}
-.carousel-btn:hover {
-  opacity: 1;
-}
-.carousel-btn-prev {
-  left: 10px;
-}
-.carousel-btn-next {
-  right: 10px;
-}
+    /* Botões de navegação do carrossel */
+    .carousel-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 0, 0, 0.6);
+      color: #fff;
+      border: none;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      z-index: 10;
+      font-weight: bold;
+      font-size: 18px;
+      opacity: 0.7;
+      transition: opacity 0.3s ease;
+    }
+    .carousel-btn:hover {
+      opacity: 1;
+    }
+    .carousel-btn-prev {
+      left: 10px;
+    }
+    .carousel-btn-next {
+      right: 10px;
+    }
 
     /* CONTAINER ESCONDIDO (DETALHES DO PROJETO) */
     #container-detalhes {
@@ -418,8 +418,38 @@
     .termometro-preenchimento {
       height: 100%;
       background-color: var(--primaria);
-      width: 50%; /* valor fake inicial */
+      width: 50%; /* valor inicial fake */
       transition: width 0.3s ease;
+    }
+
+    /* Seção para exibir progresso em texto e botão "Doar" */
+    .status-recursos {
+      margin-top: 10px;
+    }
+    .status-recursos h5 {
+      font-size: 1rem;
+      font-family: 'Montserrat', sans-serif;
+      margin-bottom: 5px;
+      color: var(--primaria);
+    }
+    .status-recursos p {
+      margin: 5px 0 15px 0;
+      font-weight: 600;
+    }
+    .btn-doar {
+      display: inline-block;
+      background-color: var(--primaria);
+      color: var(--texto-claro);
+      border: none;
+      padding: 8px 16px;
+      border-radius: 6px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .btn-doar:hover {
+      background-color: var(--secundaria);
     }
 
     /* Botão especial somente para o Curso de Inglês */
@@ -498,8 +528,7 @@
 
     <!-- Faixa onde ficam os itens do carrossel -->
     <div class="carousel-track" id="carousel-track">
-      <!-- ITEM 1: Lar de Siló
- -->
+      <!-- ITEM 1: Lar de Siló -->
       <div class="carousel-item" onclick="mostrarDetalhes('abrigo')">
         <img src="imagens/abrigo hannah.png" alt="Lar de Siló" />
         <h3>Lar de Siló</h3>
@@ -523,8 +552,8 @@
         <h3>Hannah English Course</h3>
       </div>
 
-      <!-- ITEM 5: Mesa de Bênçãos -->
-      <div class="carousel-item" onclick="mostrarDetalhes(food')">
+      <!-- ITEM 5: Mesa de Bênçãos (corrigido) -->
+      <div class="carousel-item" onclick="mostrarDetalhes('food')">
         <img src="imagens/food hannah.png" alt="Mesa de Bênçãos" />
         <h3>Mesa de Bênçãos</h3>
       </div>
@@ -581,8 +610,15 @@
             <p id="detalhes-recursos-texto">
               <!-- Texto explicativo (fake) -->
             </p>
-            <div class="termometro">
-              <div class="termometro-preenchimento" id="detalhes-termometro"></div>
+
+            <!-- Exibição de progresso -->
+            <div class="status-recursos">
+              <h5>Progresso de Arrecadação</h5>
+              <div class="termometro">
+                <div class="termometro-preenchimento" id="detalhes-termometro"></div>
+              </div>
+              <p id="status-descricao"></p>
+              <button class="btn-doar" onclick="alert('Página de Doação em desenvolvimento')">Doar</button>
             </div>
           </div>
 
@@ -700,14 +736,12 @@
       track.scrollLeft = scrollLeft - walk;
     });
 
-
     /* DADOS FAKE DOS PROJETOS */
     const projetosData = {
       abrigo: {
         titulo: "Lar de Siló",
         img: "imagens/abrigo hannah.png",
-        texto: "Descrição fake do Lar de Siló
-. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vehicula lorem vel enim ultricies, eu tempus tellus consequat.",
+        texto: "Descrição fake do Lar de Siló. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vehicula lorem vel enim ultricies, eu tempus tellus consequat.",
         acoes: [
           "Acolhimento de mulheres e crianças",
           "Atendimento psicossocial",
@@ -823,6 +857,12 @@
       // Recursos necessários
       document.getElementById('detalhes-recursos-texto').textContent = dados.recursos;
       document.getElementById('detalhes-termometro').style.width = dados.termometro + "%";
+
+      // Exibe quanto já temos e quanto falta
+      const porcentagemAlcancada = dados.termometro;
+      const porcentagemFaltando = 100 - porcentagemAlcancada;
+      document.getElementById('status-descricao').textContent =
+        porcentagemAlcancada + "% alcançado, " + porcentagemFaltando + "% faltando";
 
       // Se for o curso de inglês, mostrar botão. Caso contrário, esconder.
       const inglesBtn = document.getElementById('btn-ingles-container');
