--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -343,13 +343,15 @@
     }
 
     /* CONTAINER ESCONDIDO (DETALHES DO PROJETO) */
-    #container-detalhes {
-      display: none; /* inicia escondido */
-      width: 100%;
-      padding: 40px 20px;
-      background: url("imagens/conteiner_escondigo.png") center center / cover no-repeat fixed;
-      color: #000;
-    }
+   #container-detalhes {
+  display: none;
+  width: 100%;
+  padding: 40px 20px;
+  /* Substitua a linha abaixo pela nova imagem e inclua o background-attachment */
+  background: url("imagens/fundoconteinerescondido.png") center center / cover no-repeat;
+  background-attachment: fixed; /* Mantém o efeito de parallax */
+  color: #000;
+}
     #container-detalhes .detalhes-inner {
       max-width: 900px;
       margin: 0 auto;
