--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -247,24 +247,36 @@
        ESTILOS ESPECÍFICOS PARA A PÁGINA "PROJETOS"
        ------------------------------------------- */
 
-    /* Título "Projetos Hannah" ocupa toda a tela */
-    #pagina-projetos-hero {
-      width: 100%;
-      min-height: 100vh; /* Ocupa a altura total da tela */
-      background: url("imagens/imgprojetos.png") center center / cover no-repeat fixed;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-    #pagina-projetos-hero h1 {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 2rem;
-      color: #fff;
-      background-color: rgba(0, 0, 0, 0.4);
-      padding: 20px;
-      border-radius: 10px;
-    }
+/* Título "Projetos Hannah" ocupa toda a tela */
+#pagina-projetos-hero {
+  width: 100%;
+  min-height: 100vh; /* Ocupa a altura total da tela */
+  background: url("imagens/imgprojetos.png") center center / cover no-repeat fixed;
+  display: flex;
+  flex-direction: column; /* Alinha itens na vertical */
+  align-items: center; /* Centraliza na horizontal */
+  justify-content: center; /* Centraliza na vertical */
+  text-align: center;
+}
+
+#pagina-projetos-hero h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2rem;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#pagina-projetos-hero .subtitulo {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5rem; /* Ajuste conforme necessário */
+  color: #fff; /* Mantém o texto branco */
+  background-color: rgba(0, 0, 0, 0.4); /* Fundo semitransparente */
+  padding: 10px 20px;
+  border-radius: 8px;
+  margin-top: 10px; /* Espaço entre o título e o subtítulo */
+}
 
     /* Carrossel Horizontal (scroll + arrastar) */
     .carousel-container {
@@ -521,8 +533,9 @@
 
   <!-- TÍTULO PARALLAX (ocupa 100vh) -->
   <section id="pagina-projetos-hero">
-    <h1>Projetos Hannah</h1>
-  </section>
+  <h1>Projetos Hannah</h1>
+  <p class="subtitulo">Compartilhando o Evangelho com Amor e Cuidado Integral</p>
+</section>
 
   <!-- CARROSSEL HORIZONTAL -->
   <div class="carousel-container">
